# ab_func

./: README.md  config.py  pyproject.toml
src/ab/: io.py
src/abtoolkit/: __init__.py  config.py  datasources.py
src/abtoolkit/analysis/: tools.py
src/abtoolkit/data/: datasets.py  datasources.py  tools.py
