[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ab_func"               # замените на фактическое имя пакета
version = "0.1.0"
description = "Набор утилит для работы с данными"
readme = "README.md"
requires-python = ">=3.9"

# Основные зависимости
dependencies = [
  "scipy>=1.11.0",        
  # "pandas>=2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ab"]

[tool.setuptools.package-data]